Implemented send, receive and message filtering.

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -52,4 +52,4 @@ tr.Blue {background-color: lightblue;}
 .msg-error {color:red}
 .msg-info {color:blue}
 .msg-sent {color:goldenrod}
-.msg-recived {color:green}
+.msg-received {color:green}
